fix: 修复chat服务